metadata/force-app/main/default/objects/CustomName_OCZdu__c/CustomName_OCZdu__c.object-meta.xml
<CustomObject>
    <description>Description_jyUvI</description>
    <label>CustomLabel_WEVvI</label>
    <nameField>
        <label>CustomLabel_WEVvI</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_WEVvIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>