metadata/force-app/main/default/objects/CustomName_OCZdu__c/fields/CustomField_hOtvX__c.field-meta.xml
<CustomField>
    <fullName>CustomField_hOtvX__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldFtKFd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>