metadata/force-app/main/default/objects/CustomName_OCZdu__c/fields/CustomField_PDsbt__c.field-meta.xml
<CustomField>
    <fullName>CustomField_PDsbt__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldxsOXA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>